<resources>
    <string name="app_name">MVVM Sample App</string>
    <string name="logo_image">Logo Image</string>
    <string name="architect_your_app_with">Architect Your App With</string>
    <string name="mvvm">MVVM</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="password">password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_nsign_up_here">Don\'t have an account?\nSign Up Here</string>
    <string name="ex_mohamed">Ex: Mohamed</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_nsign_in_here">Already have an account?\nSign in Here</string>
</resources>
