<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <variable
            name="view_model"
            type="com.example.mvvmsampleapp.ui.auth.AuthViewModel" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.LoginActivity"
        android:background="#E2E2E2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="75dp"
                android:background="@drawable/ic_app_logo"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/logo_image"/>

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/logoImage">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/architect_your_app_with"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#465A61"
                    app:fontFamily="cursive"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/mvvm"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:textColor="#969EEE"
                    android:textStyle="bold"
                    android:typeface="monospace"
                    app:fontFamily="casual" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll1"
                android:background="#FFF"
                android:orientation="vertical"
                android:padding="18dp">

                <EditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@{view_model.email}"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/edit_text_round_gray_background"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="16dp"
                    android:hint="@string/example_gmail_com"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@{view_model.password}"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/edit_text_round_gray_background"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="16dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    tools:ignore="Autofill" />

                <TextView
                    android:id="@+id/text_view_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/forget_password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorPrimaryDark" />

                <Button
                    android:id="@+id/button_sign_in"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:onClick="@{view_model::onLoginButtonClick}"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/sign_in"
                    android:textAllCaps="false" />
            </LinearLayout>

            <TextView
                android:id="@+id/text_view_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/don_t_have_an_account_nsign_up_here"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimary" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:visibility="invisible" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
